# Brigadier-pp

./: .gitignore  CMakeLists.txt  Jenkinsfile  README.md
docs/: Doxyfile
src/: CMakeLists.txt  brigadier.hpp
src/brigadier/: Argument.hpp  CMakeLists.txt  Command.hpp  CommandNode.cpp  CommandNode.hpp  CommandNodeBuilder.hpp  Dispatcher.cpp  Dispatcher.hpp  ICommandNode.hpp  Parser.hpp  Registry.cpp  Registry.hpp  SubCommand.hpp  TypeHolder.hpp  argument.hpp  exceptions.hpp  options.hpp  parser.hpp  reader.hpp  utils.hpp
src/brigadier/arguments/: String.hpp
src/brigadier/parser/: Bool.hpp  CMakeLists.txt  Number.hpp  String.hpp
src/brigadier/reader/: CMakeLists.txt  Reader.cpp  Reader.hpp  StringReader.hpp
tests/: CMakeLists.txt  Dispatcher.cpp  parser.cpp  registry.cpp  stringReader.cpp  test.cpp  typeHolder.cpp
